--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://img.icons8.com/external-flaticons-flat-flat-icons/64/null/external-photography-creativity-flaticons-flat-flat-icons.png"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
